--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # dc: Data Carpentry
 # lc: Library Carpentry
 # cp: Carpentries (to use for instructor traning for instance)
-carpentry: "swc"
+carpentry: "dc"
 
 # Overall title for pages.
 title: "Software Carpentry workshop at Walton College of Business"
